--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -12,6 +12,9 @@
      <meta name="description" content="Web Application for controlling the inventory of the Help Desk Department at the Conselho da Justiça Federal in Brasília, Brazil.">
      
      <title>Inventory | SEATEN | CJF</title>
+     
+     <script src="../js/jquery-3.5.1.min.js"></script>
+     <script src="../js/bootstrap.min.js"></script>
 
      <link rel="stylesheet" href="../css/bootstrap.min.css">
      <link rel="stylesheet" href="../css/inventory.css">
@@ -20,8 +23,50 @@
 
 <body>
      <header>
-          <h1>Inventory</h1>
-          <p>In this page you can search and sort all items registered in our stock.</p>
+          <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #23884C">
+               <div class="navbar-container d-flex justify-content-between">
+
+                    <div>
+                         <a class="navbar-brand" href="#">
+                              <img src="../img/logo-justica-federal-50x50.png" width="50" height="50" class="d-inline-block align-center" alt="" loading="lazy">
+                              <span>SEATEN | Inventory</span>
+                         </a>
+                    </div>
+
+                    <div class="d-flex align-items-center">
+                         <div>
+                              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                                   <span class="navbar-toggler-icon"></span>
+                              </button>
+                         </div>
+                         
+                         <div class="collapse navbar-collapse" id="navbarNav">
+                              <ul class="navbar-nav">
+                                   <li class="nav-item active">
+                                        <a class="nav-link" href="#">Inventory <span class="sr-only">(current)</span></a>
+                                   </li>
+                                   <li class="nav-item">
+                                        <a class="nav-link" href="#">Register</a>
+                                   </li>
+                                   <li class="nav-item">
+                                        <a class="nav-link" href="#">Documentation</a>
+                                   </li>
+                                   <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                             Account
+                                        </a>
+                                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                             <a class="dropdown-item" href="#">Profile</a>
+                                             <div class="dropdown-divider"></div>
+                                             <a class="dropdown-item" href="#">Logout</a>
+                                        </div>
+                                   </li>
+                              </ul>
+                         </div>
+                    </div>
+
+               </div>
+          </nav>
      </header>
 
      
@@ -35,7 +80,6 @@
      </footer>
 
 
-     <script src="../js/bootstrap.min.js"></script>
      <script src="../js/inventory.js"></script>
 </body>
 </html>
