Top NavBar working fine, pretty and full responsive.

--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -24,47 +24,44 @@
 <body>
      <header>
           <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #23884C">
-               <div class="navbar-container d-flex justify-content-between">
-
+               <div class="navbar-mobile-container d-flex justify-content-between align-items-center">
                     <div>
                          <a class="navbar-brand" href="#">
                               <img src="../img/logo-justica-federal-50x50.png" width="50" height="50" class="d-inline-block align-center" alt="" loading="lazy">
-                              <span>SEATEN | Inventory</span>
+                              SEATEN | Inventory
                          </a>
                     </div>
-
-                    <div class="d-flex align-items-center">
+                    <div>
                          <div>
                               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                                    <span class="navbar-toggler-icon"></span>
                               </button>
                          </div>
-                         
-                         <div class="collapse navbar-collapse" id="navbarNav">
-                              <ul class="navbar-nav">
-                                   <li class="nav-item active">
-                                        <a class="nav-link" href="#">Inventory <span class="sr-only">(current)</span></a>
-                                   </li>
-                                   <li class="nav-item">
-                                        <a class="nav-link" href="#">Register</a>
-                                   </li>
-                                   <li class="nav-item">
-                                        <a class="nav-link" href="#">Documentation</a>
-                                   </li>
-                                   <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                             Account
-                                        </a>
-                                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                             <a class="dropdown-item" href="#">Profile</a>
-                                             <div class="dropdown-divider"></div>
-                                             <a class="dropdown-item" href="#">Logout</a>
-                                        </div>
-                                   </li>
-                              </ul>
-                         </div>
                     </div>
+               </div>
 
+               <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                         <li class="nav-item active">
+                              <a class="nav-link" href="#">Inventory <span class="sr-only">(current)</span></a>
+                         </li>
+                         <li class="nav-item">
+                              <a class="nav-link" href="#">Register</a>
+                         </li>
+                         <li class="nav-item">
+                              <a class="nav-link" href="#">Documentation</a>
+                         </li>
+                         <li class="nav-item dropdown">
+                              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                   Account
+                              </a>
+                              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                   <a class="dropdown-item" href="#">Profile</a>
+                                   <div class="dropdown-divider"></div>
+                                   <a class="dropdown-item" href="#">Logout</a>
+                              </div>
+                         </li>
+                    </ul>
                </div>
           </nav>
      </header>
