Top NavBar fixed and working fine, pretty and full responsive.

--- a/public/css/inventory.css
+++ b/public/css/inventory.css
@@ -7,9 +7,8 @@ body {
      background-color:#FEFEFE;
 }
 
-.navbar-container {
-     width: 75%;
-     margin: 0 auto;
+.navbar-mobile-container {
+     margin-left: 10vw;
 }
 
 .navbar-brand {
@@ -20,10 +19,7 @@ body {
 .navbar-brand img {
      border-radius: 10px;
      border: 1px solid green;
-}
-
-.navbar-brand span {
-     padding-left: 10px;
+     margin-right: 10px;
 }
 
 .nav-item {
@@ -35,18 +31,43 @@ body {
      letter-spacing: 1px;
 }
 
+.navbar-collapse {
+     margin-right: 10vw;
+     display: flex;
+     justify-content: flex-end;
+}
 
 
 
+@media screen and (max-width: 1200px){
+     .navbar-mobile-container {
+          margin-left: 1vw;
+     }
+     .navbar-collapse {
+          margin-right: 1vw;
+     }
+}
 
-@media screen and (max-width: 894px){
-     .navbar-container {
-          width: 97%;
-          margin: 0 auto;
+
+
+@media screen and (max-width: 991px){
+     .navbar {
+          padding: .5rem 0 0;
+     }
+
+     .navbar-mobile-container {
+          width: 92vw;
+          margin: 0 auto .5rem;
      }
      
      .navbar-brand {
           font-size: 1.1em;
-          font-weight: 600;
+     }
+
+     .navbar-collapse {
+          display: block;
+          margin: 0;
+          padding: 5px 2vw;
+          background-color: #1f7943;
      }
 }
