--- a/public/css/inventory.css
+++ b/public/css/inventory.css
@@ -31,6 +31,11 @@ body {
      letter-spacing: 1px;
 }
 
+.dropdown-item i.fas::after {
+     content: "     ";
+     white-space: pre;
+}
+
 .navbar-collapse {
      margin-right: 10vw;
      display: flex;
