--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -16,6 +16,8 @@
      <script src="../js/jquery-3.5.1.min.js"></script>
      <script src="../js/bootstrap.min.js"></script>
 
+     <script src="https://kit.fontawesome.com/6bc80f366a.js" crossorigin="anonymous"></script>
+
      <link rel="stylesheet" href="../css/bootstrap.min.css">
      <link rel="stylesheet" href="../css/inventory.css">
 </head>
@@ -56,9 +58,9 @@
                                    Account
                               </a>
                               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                   <a class="dropdown-item" href="#">Profile</a>
+                                   <a class="dropdown-item" href="#"><i class="fas fa-user"></i> Profile</a>
                                    <div class="dropdown-divider"></div>
-                                   <a class="dropdown-item" href="#">Logout</a>
+                                   <a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Logout</a>
                               </div>
                          </li>
                     </ul>
