--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -19,16 +19,17 @@
      <script src="https://kit.fontawesome.com/6bc80f366a.js" crossorigin="anonymous"></script>
 
      <link rel="stylesheet" href="../css/bootstrap.min.css">
+     <link rel="stylesheet" href="../css/navbar.css">
      <link rel="stylesheet" href="../css/inventory.css">
 </head>
 
 
 <body>
      <header>
-          <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #23884C">
-               <div class="navbar-mobile-container d-flex justify-content-between align-items-center">
+          <nav class="my-navbar navbar navbar-expand-lg navbar-dark" style="background-color: #23884C">
+               <div class="my-navbar-container d-flex justify-content-between align-items-center">
                     <div>
-                         <a class="navbar-brand" href="#">
+                         <a class="my-navbar-brand navbar-brand" href="#">
                               <img src="../img/logo-justica-federal-50x50.png" width="50" height="50" class="d-inline-block align-center" alt="" loading="lazy">
                               SEATEN | Inventory
                          </a>
@@ -42,19 +43,19 @@
                     </div>
                </div>
 
-               <div class="collapse navbar-collapse" id="navbarNav">
+               <div class="my-div-collapse collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                         <li class="nav-item active">
-                              <a class="nav-link" href="#">Inventory <span class="sr-only">(current)</span></a>
+                         <li class="my-nav-item nav-item active">
+                              <a class="my-nav-link nav-link" href="#">Inventory <span class="sr-only">(current)</span></a>
                          </li>
-                         <li class="nav-item">
-                              <a class="nav-link" href="#">Register</a>
+                         <li class="my-nav-item nav-item">
+                              <a class="my-nav-link nav-link" href="#">Register</a>
                          </li>
-                         <li class="nav-item">
-                              <a class="nav-link" href="#">Documentation</a>
+                         <li class="my-nav-item nav-item">
+                              <a class="my-nav-link nav-link" href="#">Documentation</a>
                          </li>
-                         <li class="nav-item dropdown">
-                              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                         <li class="my-nav-item nav-item dropdown">
+                              <a class="my-nav-link nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                    Account
                               </a>
                               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -69,7 +70,68 @@
      </header>
 
      
-     <main>
+     <main class="container">
+
+          <div class="container">
+               <h1 class="main-title text-center">Inventory</h1>
+
+               <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                         <a class="nav-link active" href="#">Items</a>
+                    </li>
+                    <li class="nav-item">
+                         <a class="nav-link" href="#">Models</a>
+                    </li>
+                    <li class="nav-item">
+                         <a class="nav-link" href="#">Categories</a>
+                    </li>
+                    <!--<li class="nav-item">
+                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>-->
+               </ul>
+          </div>
+
+          <form class="filter-items">
+               <div class="form-group">
+                    <label for="tableFilterField">Filter</label>
+                    <input type="text" class="form-control" id="tableFilterField" aria-describedby="filter" placeholder="Filter by type, brand, model or inventory number">
+               </div>
+          </form>
+
+          <table class="table-items table table-hover table-responsive-sm">
+               <thead>
+                    <th scope="col">Item</th>
+                    <th scope="col">Inventory Number</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Location</th>
+               </thead>
+               <tbody>
+                    <tr>
+                         <td>Desktop - Dell 7070</td>
+                         <td>CJF 020.254</td>
+                         <td><span class="badge badge-success">AVAILABLE</span></td>
+                         <td>SEATEN - Stockroom</td>
+                    </tr>
+                    <tr>
+                         <td>Desktop - Lenovo ThinkCentre</td>
+                         <td>CJF 020.437</td>
+                         <td><span class="badge badge-danger">TAKEN</span></td>
+                         <td>SAD - SEMAPA</td>
+                    </tr>
+                    <tr>
+                         <td>Screen - AOC HV700S+</td>
+                         <td>CJF 016.321</td>
+                         <td><span class="badge badge-danger">TAKEN</span></td>
+                         <td>SG-GAB</td>
+                    </tr>
+                    <tr>
+                         <td>Notebook - Asus Evolver</td>
+                         <td>CJF 018.908</td>
+                         <td><span class="badge badge-success">AVAILABLE</span></td>
+                         <td>SEATEN - Stockroom</td>
+                    </tr>
+               </tbody>
+          </table>
 
      </main>
 
