--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -113,28 +113,31 @@
                          <tr>
                               <td>Desktop - Dell 7070</td>
                               <td>CJF 020.254</td>
-                              <td class="text-center"><span class="badge badge-available">&#x1f44d; AVAILABLE</span></td>
+                              <td><span class="badge badge-available">👍 AVAILABLE</span></td>
                               <td>SEATEN - Stockroom</td>
                          </tr>
                          <tr>
                               <td>Desktop - Lenovo ThinkCentre</td>
                               <td>CJF 020.437</td>
-                              <td class="text-center"><span class="badge badge-taken">&#x1f6c7; TAKEN</span></td>
+                              <td><span class="badge badge-taken">❌ TAKEN</span></td>
                               <td>SAD - SEMAPA</td>
                          </tr>
                          <tr>
                               <td>Screen - AOC HV700S+</td>
                               <td>CJF 016.321</td>
-                              <td class="text-center"><span class="badge badge-taken">&#x1f6c7; TAKEN</span></td>
+                              <td><span class="badge badge-taken">❌ TAKEN</span></td>
                               <td>SG-GAB</td>
                          </tr>
                          <tr>
                               <td>Notebook - Asus Evolver</td>
                               <td>CJF 018.908</td>
-                              <td class="text-center"><span class="badge badge-available">&#x1f44d; AVAILABLE</span></td>
+                              <td><span class="badge badge-available">👍 AVAILABLE</span></td>
                               <td>SEATEN - Stockroom</td>
                          </tr>
                     </tbody>
+                    <tfoot>
+
+                    </tfoot>
                </table>
           </section>
 
