Added a spinner animation while the table content is loaded. And now the table header is also built via JavaScript.

--- a/public/css/inventory.css
+++ b/public/css/inventory.css
@@ -38,3 +38,8 @@ body {
      border: 3px solid rgb(218, 0, 0);
      color: white;
 }
+
+.my-spinner {
+     display: block;
+     margin: 100px auto;
+}
