--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -108,20 +108,15 @@
                </form>
 
                <table class="table-stock-items table table-hover table-responsive-sm">
-                    <thead>
-                         <th scope="col">Stock Item</th>
-                         <th scope="col">Inventory Number</th>
-                         <th scope="col">Status</th>
-                         <th scope="col">Location</th>
-                    </thead>
-
-                    <tbody>
-                    </tbody>
-
-                    <tfoot>
-                    </tfoot>
+                    <thead></thead>
+                    <tbody></tbody>
+                    <tfoot></tfoot>
                </table>
           </section>
+
+          <div class="my-spinner spinner-border" role="status">
+               <span class="sr-only">Loading...</span>
+          </div>
 
      </main>
 
