--- a/public/css/inventory.css
+++ b/public/css/inventory.css
@@ -18,6 +18,11 @@ body {
      margin-top: 4.5vh;
 }
 
+.table-stock-items thead th {
+     font-weight: bold;
+     vertical-align: middle;
+}
+
 /* Aligns all the <th> and <td> tags at the center, except the first ones in each row */
 .table-stock-items th:not(:first-child), .table-stock-items tr td:not(:first-child) {
      text-align: center;
@@ -42,4 +47,25 @@ body {
 .my-spinner {
      display: block;
      margin: 100px auto;
+}
+
+.page-footer {
+     background: rgb(35,136,76);
+     background: radial-gradient(circle, rgba(35,136,76,1) 30%, rgba(29,97,56,1) 65%);
+     margin-top: 50px;
+     min-height: 8vh;
+     text-align: center;
+     font-size: 1em;
+     color: white;
+}
+
+
+
+
+
+
+@media screen and (max-width: 991px){
+     .page-footer {
+          min-height: 10vh;
+     }
 }
