--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -18,6 +18,7 @@
 
      <script src="https://kit.fontawesome.com/6bc80f366a.js" crossorigin="anonymous"></script>
 
+     <link rel="stylesheet" href="../css/reset.css">
      <link rel="stylesheet" href="../css/bootstrap.min.css">
      <link rel="stylesheet" href="../css/navbar.css">
      <link rel="stylesheet" href="../css/inventory.css">
@@ -26,7 +27,7 @@
 
 <body>
      <header>
-          <nav class="my-navbar navbar navbar-expand-lg navbar-dark" style="background-color: #23884C">
+          <nav class="my-navbar navbar navbar-expand-lg navbar-dark">
                <div class="my-navbar-container d-flex justify-content-between align-items-center">
                     <div>
                          <a class="my-navbar-brand navbar-brand" href="#">
@@ -121,7 +122,11 @@
      </main>
 
 
-     <footer>
+     <footer class="page-footer d-flex align-items-center">
+          <div class="container">
+               <p class="m-0">Created by Jair Junior</p>
+               <p class="m-0">© Copyright 2021</p>
+          </div>
      </footer>
 
 
