--- a/public/css/inventory.css
+++ b/public/css/inventory.css
@@ -49,6 +49,13 @@ body {
      margin: 100px auto;
 }
 
+.inventory-modal-pills {
+     width: 100%;
+}
+
+
+
+
 .page-footer {
      background: rgb(35,136,76);
      background: radial-gradient(circle, rgba(35,136,76,1) 30%, rgba(29,97,56,1) 65%);
