--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -115,9 +115,46 @@
                </table>
           </section>
 
+
           <div class="my-spinner spinner-border" role="status">
                <span class="sr-only">Loading...</span>
           </div>
+
+
+
+          <div class="modal fade" id="inventoryModal" tabindex="-1" aria-labelledby="inventoryModalTitle" aria-describedby="inventoryModalDescription">
+               <div class="modal-dialog">
+                    <div class="modal-content">
+                         <div class="modal-header">
+                              <ul class="inventory-modal-pills nav nav-pills nav-fill">
+                                   <li class="nav-item">
+                                        <a class="nav-link active" href="#">Information</a>
+                                   </li>
+                                   <li class="nav-item">
+                                        <a class="nav-link" href="#">Transfer Item</a>
+                                   </li>
+                                   <li class="nav-item">
+                                        <a class="nav-link" href="#">Update</a>
+                                   </li>
+                                   <!--<li class="nav-item">
+                                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                                   </li>-->
+                              </ul>
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                   <span aria-hidden="true">&times;</span>
+                              </button>
+                         </div>
+                         <div class="modal-body">
+                              <p id="inventoryModalDescription">Information below relative to the Stock Item.</p>
+                         </div>
+                         <div class="modal-footer">
+                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                              <button type="button" class="btn btn-primary">Save changes</button>
+                         </div>
+                    </div>
+               </div>
+          </div>
+
 
      </main>
 
@@ -131,5 +168,6 @@
 
 
      <script src="../js/inventory.js"></script>
+     <script src="../js/modal.js"></script>
 </body>
 </html>
