Modal in progress. It's already showing information about the item clicked.

--- a/public/css/inventory.css
+++ b/public/css/inventory.css
@@ -44,7 +44,7 @@ body {
      color: white;
 }
 
-.my-spinner {
+.my-table-spinner {
      display: block;
      margin: 100px auto;
 }
@@ -53,13 +53,26 @@ body {
      width: 100%;
 }
 
+.my-inventory-modal-spinner {
+     display: block;
+     margin: 100px auto;
+}
+
+.modal-item-title {
+     margin-bottom: 1em;
+}
+
+.modal-item-info, .modal-item-spec {
+     font-weight: bold;
+}
+
 
 
 
 .page-footer {
      background: rgb(35,136,76);
      background: radial-gradient(circle, rgba(35,136,76,1) 30%, rgba(29,97,56,1) 65%);
-     margin-top: 50px;
+     margin-top: 10vh;
      min-height: 8vh;
      text-align: center;
      font-size: 1em;
