--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -116,22 +116,22 @@
           </section>
 
 
-          <div class="my-spinner spinner-border" role="status">
+          <div class="my-table-spinner spinner-border" role="status">
                <span class="sr-only">Loading...</span>
           </div>
 
 
 
           <div class="modal fade" id="inventoryModal" tabindex="-1" aria-labelledby="inventoryModalTitle" aria-describedby="inventoryModalDescription">
-               <div class="modal-dialog">
+               <div class="modal-dialog modal-lg modal-dialog-centered">
                     <div class="modal-content">
                          <div class="modal-header">
                               <ul class="inventory-modal-pills nav nav-pills nav-fill">
                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#">Information</a>
+                                        <a class="nav-link active" href="#">Info</a>
                                    </li>
                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Transfer Item</a>
+                                        <a class="nav-link" href="#">Transfer</a>
                                    </li>
                                    <li class="nav-item">
                                         <a class="nav-link" href="#">Update</a>
@@ -145,11 +145,13 @@
                               </button>
                          </div>
                          <div class="modal-body">
-                              <p id="inventoryModalDescription">Information below relative to the Stock Item.</p>
+                              <div class="my-inventory-modal-spinner spinner-border" role="status">
+                                   <span class="sr-only">Loading...</span>
+                              </div>
                          </div>
                          <div class="modal-footer">
                               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                              <button type="button" class="btn btn-primary">Save changes</button>
+                              <!--<button type="button" class="btn btn-primary">Save changes</button>-->
                          </div>
                     </div>
                </div>
