--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -128,13 +128,13 @@
                          <div class="modal-header">
                               <ul class="inventory-modal-pills nav nav-pills nav-fill">
                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#">Info</a>
+                                        <a class="nav-link active" href="#"><i class="fas fa-info-circle"></i> Info</a>
                                    </li>
                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Transfer</a>
+                                        <a class="nav-link" href="#"><i class="fas fa-share"></i> Transfer</a>
                                    </li>
                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Update</a>
+                                        <a class="nav-link" href="#"><i class="fas fa-edit"></i> Update</a>
                                    </li>
                                    <!--<li class="nav-item">
                                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
