--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -92,6 +92,8 @@
                </ul>
           </header>
 
+
+
           <section>
                <form class="filter-stock-items">
                     <div class="form-group">
@@ -116,49 +118,54 @@
           </section>
 
 
+
           <div class="my-table-spinner spinner-border" role="status">
                <span class="sr-only">Loading...</span>
           </div>
 
+     </main>
 
+     
 
-          <div class="modal fade" id="inventoryModal" tabindex="-1" aria-labelledby="inventoryModalTitle" aria-describedby="inventoryModalDescription">
-               <div class="modal-dialog modal-lg modal-dialog-centered">
-                    <div class="modal-content">
-                         <div class="modal-header">
-                              <ul class="inventory-modal-pills nav nav-pills nav-fill">
-                                   <li class="nav-item">
-                                        <a class="nav-link active" href="#"><i class="fas fa-info-circle"></i> Info</a>
-                                   </li>
-                                   <li class="nav-item">
-                                        <a class="nav-link" href="#"><i class="fas fa-share"></i> Transfer</a>
-                                   </li>
-                                   <li class="nav-item">
-                                        <a class="nav-link" href="#"><i class="fas fa-edit"></i> Update</a>
-                                   </li>
-                                   <!--<li class="nav-item">
-                                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                                   </li>-->
-                              </ul>
-                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                   <span aria-hidden="true">&times;</span>
-                              </button>
-                         </div>
-                         <div class="modal-body">
-                              <div class="my-inventory-modal-spinner spinner-border" role="status">
-                                   <span class="sr-only">Loading...</span>
-                              </div>
-                         </div>
-                         <div class="modal-footer">
-                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                              <!--<button type="button" class="btn btn-primary">Save changes</button>-->
+     <aside class="modal fade" id="inventoryModal" tabindex="-1" aria-labelledby="inventoryModalTitle" aria-describedby="inventoryModalDescription">
+          <div class="modal-dialog modal-lg modal-dialog-centered">
+               <div class="modal-content">
+
+                    <div class="modal-header">
+                         <ul class="inventory-modal-pills nav nav-pills nav-fill">
+                              <li class="nav-item">
+                                   <a class="nav-link active" href="#"><i class="fas fa-info-circle"></i> Info</a>
+                              </li>
+                              <li class="nav-item">
+                                   <a class="nav-link" href="#"><i class="fas fa-share"></i> Transfer</a>
+                              </li>
+                              <li class="nav-item">
+                                   <a class="nav-link" href="#"><i class="fas fa-edit"></i> Update</a>
+                              </li>
+                              <!--<li class="nav-item">
+                                   <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                              </li>-->
+                         </ul>
+                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                         </button>
+                    </div>
+
+                    <div class="modal-body">
+                         <div class="my-modal-spinner spinner-border" role="status">
+                              <span class="sr-only">Loading...</span>
                          </div>
                     </div>
+
+                    <div class="modal-footer">
+                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                         <!--<button type="button" class="btn btn-primary">Save changes</button>-->
+                    </div>
+
                </div>
           </div>
+     </aside>
 
-
-     </main>
 
 
      <footer class="page-footer d-flex align-items-center">
@@ -167,6 +174,7 @@
                <p class="m-0">© Copyright 2021</p>
           </div>
      </footer>
+
 
 
      <script src="../js/inventory.js"></script>
