Small bug fixed, deleted some console.log() and changed the file name from modal.js to inventory-modal-info.js

--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -178,6 +178,7 @@
 
 
      <script src="../js/inventory.js"></script>
-     <script src="../js/modal.js"></script>
+     <script src="../js/inventory-modal-info.js"></script>
+     <script src="../js/inventory-modal-transfer.js"></script>
 </body>
 </html>
