New JS files for controlling the other options in the Modal (Transfer and Update). Now it's possible to navigate throught the tabs. Nothing is shown yet.

--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -133,13 +133,13 @@
 
                     <div class="modal-header">
                          <ul class="inventory-modal-pills nav nav-pills nav-fill">
-                              <li class="nav-item">
-                                   <a class="nav-link active" href="#"><i class="fas fa-info-circle"></i> Info</a>
+                              <li class="nav-item" id="modalPillInfo">
+                                   <a class="nav-link" href="#"><i class="fas fa-info-circle"></i> Info</a>
                               </li>
-                              <li class="nav-item">
+                              <li class="nav-item" id="modalPillTransfer">
                                    <a class="nav-link" href="#"><i class="fas fa-share"></i> Transfer</a>
                               </li>
-                              <li class="nav-item">
+                              <li class="nav-item" id="modalPillUpdate">
                                    <a class="nav-link" href="#"><i class="fas fa-edit"></i> Update</a>
                               </li>
                               <!--<li class="nav-item">
@@ -180,5 +180,6 @@
      <script src="../js/inventory.js"></script>
      <script src="../js/inventory-modal-info.js"></script>
      <script src="../js/inventory-modal-transfer.js"></script>
+     <script src="../js/inventory-modal-update.js"></script>
 </body>
 </html>
