--- a/public/css/inventory.css
+++ b/public/css/inventory.css
@@ -79,12 +79,17 @@ body {
      margin-top: 2em;
 }
 
-#inventoryModal div.modal-body p {
+.modal div.modal-body p {
      margin: 0 0 0.4em;
 }
 
 .modal-item-info {
      font-weight: bold;
+}
+
+#modalErrorMsg {
+     color: red;
+     margin: 10vh 0px;
 }
 
 /*********************************************************************/
