--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -158,8 +158,9 @@
                     </div>
 
                     <div class="modal-footer">
-                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                         <!--<button type="button" class="btn btn-primary">Save changes</button>-->
+                         <button type="button" class="modal-btn-close btn btn-secondary" data-dismiss="modal">Close</button>
+                         <button type="button" class="modal-btn-cancel btn btn-danger" data-dismiss="modal">Cancel</button>
+                         <button type="button" class="modal-btn-save btn btn-success">Register</button>
                     </div>
 
                </div>
