--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -151,7 +151,7 @@
                          </button>
                     </div>
 
-                    <div class="modal-body">
+                    <div class="modal-body p-4">
                          <div class="my-modal-spinner spinner-border" role="status">
                               <span class="sr-only">Loading...</span>
                          </div>
