--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -160,7 +160,8 @@
                     <div class="modal-footer">
                          <button type="button" class="modal-btn-close btn btn-secondary" data-dismiss="modal">Close</button>
                          <button type="button" class="modal-btn-cancel btn btn-danger" data-dismiss="modal">Cancel</button>
-                         <button type="button" class="modal-btn-save btn btn-success">Register</button>
+                         <button type="button" class="modal-btn-transfer btn btn-success">Transfer</button>
+                         <button type="button" class="modal-btn-update btn btn-success">Update</button>
                     </div>
 
                </div>
