--- a/public/css/inventory.css
+++ b/public/css/inventory.css
@@ -7,6 +7,10 @@ body {
      background-color:#FEFEFE;
 }
 
+.text-red{
+     color: rgb(167, 1, 1);
+}
+
 /*********************************************************************/
 
 .main-title {
