--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -1,187 +1,153 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-     <meta http-equiv="content-language" content="en-us, pt-br">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-     <meta name="generator" content="Visual Studio Code, MongoDB Atlas and Insomnia.">
-     <meta name="author" content="Jair Dias de Oliveira Junior">
-     <meta name="keywords" content="Inventory, Stock, Control, Web Application, HTML, CSS, JavaScript, Node.js, MongoDB">
-     <meta name="description" content="Web Application for controlling the inventory of the Help Desk Department at the Conselho da Justiça Federal in Brasília, Brazil.">
-     
-     <title>Inventory | SEATEN | CJF</title>
-     
-     <script src="../js/jquery-3.5.1.min.js"></script>
-     <script src="../js/bootstrap.min.js"></script>
-
-     <script src="https://kit.fontawesome.com/6bc80f366a.js" crossorigin="anonymous"></script>
-
-     <link rel="stylesheet" href="../css/reset.css">
-     <link rel="stylesheet" href="../css/bootstrap.min.css">
-     <link rel="stylesheet" href="../css/navbar.css">
-     <link rel="stylesheet" href="../css/inventory.css">
-</head>
-
-
-<body>
-     <header>
-          <nav class="my-navbar navbar navbar-expand-lg navbar-dark">
-               <div class="my-navbar-container d-flex justify-content-between align-items-center">
-                    <div>
-                         <a class="my-navbar-brand navbar-brand" href="#">
-                              <img src="../img/logo-justica-federal-50x50.png" width="50" height="50" class="d-inline-block align-center" alt="" loading="lazy">
-                              SEATEN | Inventory
-                         </a>
-                    </div>
-                    <div>
-                         <div>
-                              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                                   <span class="navbar-toggler-icon"></span>
-                              </button>
-                         </div>
-                    </div>
+<header>
+     <nav class="my-navbar navbar navbar-expand-lg navbar-dark">
+          <div class="my-navbar-container d-flex justify-content-between align-items-center">
+               <div>
+                    <a class="my-navbar-brand navbar-brand" href="#">
+                         <img src="../img/logo-justica-federal-50x50.png" width="50" height="50" class="d-inline-block align-center" alt="" loading="lazy">
+                         SEATEN | Inventory
+                    </a>
                </div>
-
-               <div class="my-div-collapse collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                         <li class="my-nav-item nav-item active">
-                              <a class="my-nav-link nav-link" href="#">Inventory <span class="sr-only">(current)</span></a>
-                         </li>
-                         <li class="my-nav-item nav-item">
-                              <a class="my-nav-link nav-link" href="#">Register</a>
-                         </li>
-                         <li class="my-nav-item nav-item">
-                              <a class="my-nav-link nav-link" href="#">Documentation</a>
-                         </li>
-                         <li class="my-nav-item nav-item dropdown">
-                              <a class="my-nav-link nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                   Account
-                              </a>
-                              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                   <a class="dropdown-item" href="#"><i class="fas fa-user"></i> Profile</a>
-                                   <div class="dropdown-divider"></div>
-                                   <a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Logout</a>
-                              </div>
-                         </li>
-                    </ul>
-               </div>
-          </nav>
-     </header>
-
-     
-     <main class="container">
-
-          <header class="container p-0">
-               <h1 class="main-title text-center">Inventory</h1>
-
-               <ul class="nav nav-tabs">
-                    <li class="nav-item">
-                         <a class="nav-link active" href="#">Stock Items</a>
-                    </li>
-                    <li class="nav-item">
-                         <a class="nav-link" href="#">Models</a>
-                    </li>
-                    <li class="nav-item">
-                         <a class="nav-link" href="#">Categories</a>
-                    </li>
-                    <!--<li class="nav-item">
-                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>-->
-               </ul>
-          </header>
-
-
-
-          <section>
-               <form class="filter-stock-items">
-                    <div class="form-group">
-                         <legend class="h5">Filter</legend>
-                         <label for="tableFilterField" class="sr-only">
-                              Use the field below to search within the inventory.
-                         </label>
-                         <div class="input-group mb-2">
-                              <div class="input-group-prepend">
-                                   <div class="input-group-text">🔎</div>
-                              </div>
-                              <input type="text" class="form-control" id="tableFilterField" aria-describedby="filter" placeholder="Search by category, model, inventory number, status or Service Now ticket">
-                         </div>
-                    </div>
-               </form>
-
-               <table class="table-stock-items table table-hover table-responsive-sm">
-                    <thead></thead>
-                    <tbody></tbody>
-                    <tfoot></tfoot>
-               </table>
-          </section>
-
-
-
-          <div class="my-table-spinner spinner-border" role="status">
-               <span class="sr-only">Loading...</span>
-          </div>
-
-     </main>
-
-     
-
-     <aside class="modal fade" id="inventoryModal" tabindex="-1" aria-labelledby="inventoryModalTitle" aria-describedby="inventoryModalDescription">
-          <div class="modal-dialog modal-lg modal-dialog-centered">
-               <div class="modal-content">
-
-                    <div class="modal-header">
-                         <ul class="inventory-modal-pills nav nav-pills nav-fill">
-                              <li class="nav-item" id="modalPillInfo">
-                                   <a class="nav-link" href="#"><i class="fas fa-info-circle"></i> Info</a>
-                              </li>
-                              <li class="nav-item" id="modalPillTransfer">
-                                   <a class="nav-link" href="#"><i class="fas fa-share"></i> Transfer</a>
-                              </li>
-                              <li class="nav-item" id="modalPillUpdate">
-                                   <a class="nav-link" href="#"><i class="fas fa-edit"></i> Update</a>
-                              </li>
-                              <!--<li class="nav-item">
-                                   <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                              </li>-->
-                         </ul>
-                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                              <span aria-hidden="true">&times;</span>
+               <div>
+                    <div>
+                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                              <span class="navbar-toggler-icon"></span>
                          </button>
                     </div>
-
-                    <div class="modal-body p-4">
-                         <div class="my-modal-spinner spinner-border" role="status">
-                              <span class="sr-only">Loading...</span>
-                         </div>
-                    </div>
-
-                    <div class="modal-footer">
-                         <button type="button" class="modal-btn-close btn btn-secondary" data-dismiss="modal">Close</button>
-                         <button type="button" class="modal-btn-cancel btn btn-danger" data-dismiss="modal">Cancel</button>
-                         <button type="button" class="modal-btn-transfer btn btn-success">Transfer</button>
-                         <button type="button" class="modal-btn-update btn btn-success">Update</button>
-                    </div>
-
                </div>
           </div>
-     </aside>
 
-
-
-     <footer class="page-footer d-flex align-items-center">
-          <div class="container">
-               <p class="m-0">Created by Jair Junior</p>
-               <p class="m-0">© Copyright 2021</p>
+          <div class="my-div-collapse collapse navbar-collapse" id="navbarNav">
+               <ul class="navbar-nav">
+                    <li class="my-nav-item nav-item active">
+                         <a class="my-nav-link nav-link" href="#">Inventory <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="my-nav-item nav-item">
+                         <a class="my-nav-link nav-link" href="#">Register</a>
+                    </li>
+                    <li class="my-nav-item nav-item">
+                         <a class="my-nav-link nav-link" href="#">Documentation</a>
+                    </li>
+                    <li class="my-nav-item nav-item dropdown">
+                         <a class="my-nav-link nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Account
+                         </a>
+                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                              <a class="dropdown-item" href="#"><i class="fas fa-user"></i> Profile</a>
+                              <div class="dropdown-divider"></div>
+                              <a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                         </div>
+                    </li>
+               </ul>
           </div>
-     </footer>
+     </nav>
+</header>
+
+
+<main class="container">
+
+     <header class="container p-0">
+          <h1 class="main-title text-center">Inventory</h1>
+
+          <ul class="nav nav-tabs">
+               <li class="nav-item">
+                    <a class="nav-link active" href="#">Stock Items</a>
+               </li>
+               <li class="nav-item">
+                    <a class="nav-link" href="#">Models</a>
+               </li>
+               <li class="nav-item">
+                    <a class="nav-link" href="#">Categories</a>
+               </li>
+          </ul>
+     </header>
 
 
 
-     <script src="../js/inventory.js"></script>
-     <script src="../js/inventory-modal-info.js"></script>
-     <script src="../js/inventory-modal-transfer.js"></script>
-     <script src="../js/inventory-modal-update.js"></script>
-</body>
-</html>
+     <section>
+          <form class="filter-stock-items">
+               <div class="form-group">
+                    <legend class="h5">Filter</legend>
+                    <label for="tableFilterField" class="sr-only">
+                         Use the field below to search within the inventory.
+                    </label>
+                    <div class="input-group mb-2">
+                         <div class="input-group-prepend">
+                              <div class="input-group-text">🔎</div>
+                         </div>
+                         <input type="text" class="form-control" id="tableFilterField" aria-describedby="filter" placeholder="Search by category, model, inventory number, status or Service Now ticket">
+                    </div>
+               </div>
+          </form>
+
+          <table class="table-inventory table table-hover table-responsive-sm">
+               <thead></thead>
+               <tbody></tbody>
+               <tfoot></tfoot>
+          </table>
+     </section>
+
+
+
+     <div class="my-table-spinner spinner-border" role="status">
+          <span class="sr-only">Loading...</span>
+     </div>
+
+</main>
+
+
+
+<aside class="modal fade" id="inventoryModal" tabindex="-1" aria-labelledby="inventoryModalTitle" aria-describedby="inventoryModalDescription">
+     <div class="modal-dialog modal-lg modal-dialog-centered">
+          <div class="modal-content">
+
+               <div class="modal-header">
+                    <ul class="inventory-modal-pills nav nav-pills nav-fill">
+                         <li class="nav-item" id="modalPillInfo">
+                              <a class="nav-link" href="#"><i class="fas fa-info-circle"></i> Info</a>
+                         </li>
+                         <li class="nav-item" id="modalPillTransfer">
+                              <a class="nav-link" href="#"><i class="fas fa-share"></i> Transfer</a>
+                         </li>
+                         <li class="nav-item" id="modalPillUpdate">
+                              <a class="nav-link" href="#"><i class="fas fa-edit"></i> Update</a>
+                         </li>
+                         <!--<li class="nav-item">
+                              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                         </li>-->
+                    </ul>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                         <span aria-hidden="true">&times;</span>
+                    </button>
+               </div>
+
+               <div class="modal-body p-4">
+                    <div class="my-modal-spinner spinner-border" role="status">
+                         <span class="sr-only">Loading...</span>
+                    </div>
+               </div>
+
+               <div class="modal-footer">
+                    <button type="button" class="modal-btn-close btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="modal-btn-cancel btn btn-danger" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="modal-btn-transfer btn btn-success">Transfer</button>
+                    <button type="button" class="modal-btn-update btn btn-success">Update</button>
+               </div>
+
+          </div>
+     </div>
+</aside>
+
+
+
+<footer class="page-footer d-flex align-items-center">
+     <div class="container">
+          <p class="m-0">Created by Jair Junior</p>
+          <p class="m-0">© Copyright 2021</p>
+     </div>
+</footer>
+
+
+<script src="../js/inventory.js"></script>
+<script src="../js/inventory-modal-info.js"></script>
+<script src="../js/inventory-modal-transfer.js"></script>
+<script src="../js/inventory-modal-update.js"></script>
