--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -120,17 +120,17 @@
                     </button>
                </div>
 
-               <div class="modal-body p-4">
+               <div class="modal-body">
                     <div class="my-modal-spinner spinner-border" role="status">
                          <span class="sr-only">Loading...</span>
                     </div>
                </div>
 
                <div class="modal-footer">
+                    <button type="button" class="modal-btn-transfer btn btn-success" form="formTransferTo">Transfer</button>
+                    <button type="button" class="modal-btn-update btn btn-success">Update</button>
                     <button type="button" class="modal-btn-close btn btn-secondary" data-dismiss="modal">Close</button>
                     <button type="button" class="modal-btn-cancel btn btn-danger" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="modal-btn-transfer btn btn-success">Transfer</button>
-                    <button type="button" class="modal-btn-update btn btn-success">Update</button>
                </div>
 
           </div>
