--- a/public/views/inventory.html
+++ b/public/views/inventory.html
@@ -103,13 +103,13 @@
                <div class="modal-header">
                     <ul class="inventory-modal-pills nav nav-pills nav-fill">
                          <li class="nav-item" id="modalPillInfo">
-                              <a class="nav-link" href="#"><i class="fas fa-info-circle"></i> Info</a>
+                              <a class="my-pill-link nav-link" href="#"><i class="fas fa-info-circle"></i> Info</a>
                          </li>
                          <li class="nav-item" id="modalPillTransfer">
-                              <a class="nav-link" href="#"><i class="fas fa-share"></i> Transfer</a>
+                              <a class="my-pill-link nav-link" href="#"><i class="fas fa-share"></i> Transfer</a>
                          </li>
                          <li class="nav-item" id="modalPillUpdate">
-                              <a class="nav-link" href="#"><i class="fas fa-edit"></i> Update</a>
+                              <a class="my-pill-link nav-link" href="#"><i class="fas fa-edit"></i> Update</a>
                          </li>
                          <!--<li class="nav-item">
                               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -127,7 +127,7 @@
                </div>
 
                <div class="modal-footer">
-                    <button type="button" class="modal-btn-transfer btn btn-success" form="formTransferTo">Transfer</button>
+                    <button type="button" class="modal-btn-transfer btn btn-success">Transfer</button>
                     <button type="button" class="modal-btn-update btn btn-success">Update</button>
                     <button type="button" class="modal-btn-close btn btn-secondary" data-dismiss="modal">Close</button>
                     <button type="button" class="modal-btn-cancel btn btn-danger" data-dismiss="modal">Cancel</button>
