Now an Alert box is shown after Transfer Form is submited. It will be red if the transfer fails or green if it succeeds.

--- a/public/css/inventory.css
+++ b/public/css/inventory.css
@@ -25,6 +25,13 @@ main.container {
 
 /*********************************************************************/
 
+.my-alert i.fas:after {
+     content: '    ';
+     white-space: pre;
+}
+
+/*********************************************************************/
+
 .filter-stock-items {
      margin-top: 4.5vh;
 }
